[package]
name = "mine-POC-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["legacy"] }
ethereum-types = "0.12.0"
rust-crypto = "0.2.36"
eth-encode-packed = "0.1.0"
hex = "0.4.3"
rand = "0.8.5"
random = "0.14.0"
